# studfood

./: .env.example  .gitignore  LICENSE  Makefile  README.md  StudFood (Backup 1700918053059).bsdesign  StudFood.bsdesign  manage.py  pyproject.toml
.github/workflows/: app.yml
main/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
static/bootstrap/: about.html  book.html  menu.html
static/bootstrap/css/: style.css  style.css.map  style.scss
static/css/: bs-theme-overrides.css
studfood/: asgi.py  settings.py  urls.py  wsgi.py
templates/main/: about.html  base.html  catalogue.html  favourite.html  generator.html  index.html  login.html  profile.html  recipes.html
