[tool.poetry]
name = "studfood"
version = "0.1.0"
description = ""
authors = ["giveuper39 <giveuper39@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^21.2.0"
django = "^4.2.7"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest-coverage = "^0.0"
ruff = "^0.1.3"
mypy = "^1.6.1"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 105
select = ["ALL"]
