[tool.poetry]
name = "studfood"
version = "0.1.0"
description = ""
authors = ["giveuper39 <giveuper39@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^21.2.0"
django = "^5.0.3"
python-dotenv = "^1.0.0"
pillow = "^10.2.0"


[tool.poetry.group.dev.dependencies]
pytest-coverage = "^0.0"
ruff = "^0.1.3"
mypy = "^1.6.1"
pytest = "^7.4.3"
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
select = ["ALL"]
ignore = ["D101", "RUF012", "ANN101", "ERA001", "PGH", "D1", "PTH118", "ANN", "FIX"]
exclude = ["main/migrations", "manage.py"]

[tool.black]
line-length = 120
include = '\.pyi?$'

[tool.mypy]
exclude = ["main/migrations"]
disable_error_code = ["import-untyped"]